fixed small map on mobile

--- a/src/components/MainMap/mainmap.module.css
+++ b/src/components/MainMap/mainmap.module.css
@@ -15,6 +15,7 @@
 #main-map-id {
 	width: 100%;
 	height: 100%;
+	min-height: 80vh;
 }
 
 .map-loading {
@@ -46,7 +47,7 @@
 	flex-grow: 1;
 	width: 100%;
 	min-width: min-content;
-	min-height: 60vh;
+	min-height: 50vh;
 	max-height: 100%;
 	position: relative;
 	grid-area: sidebar;
@@ -87,9 +88,18 @@
 @media only screen and (max-width: 600px) {
 	.main-map-container {
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
+		grid-template-rows: repeat(auto-fit, minmax(10rem, 1fr));
 		grid-template-areas:
 		"sidebar"
 		"map";
-	}	
+		grid-gap: .2rem;
+	}
+	.leaflet-container {
+		min-height: 40vh;
+		max-height: 40vh;
+	}
+	.main-map-sidebar {
+		min-height: 40vh;
+		max-height: 40vh;
+	}
 }
